--- a/index.html
+++ b/index.html
@@ -5,78 +5,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>new project</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>website style guide</title>
 </head>
 
 <body>
-    <header>
-        <h1>HTML Table Reference</h1>
-        <h2>Table Tags</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Tag</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                </tr>
-            <tbody>
-                <tr>
-                    <td><span class="code">&lt;table&gt;</span></td>
-                    <td>Table</td>
-                    <td>The wrapper element for all HTML tables.</td>
-                </tr>
-                <tr>
-                    <td><span class="code">&lt;thead&gt;</span></td>
-                    <td>Table Head</td>
-                    <td>The set of rows defining the column headers in a table.</td>
-                </tr>
-                <tr>
-                    <td><span class="code">&lt;tbody&gt;</span></td>
-                    <td>Table Body</td>
-                    <td>The set of rows containing actual table data.</td>
-                </tr>
-                <tr>
-                    <td><span class="code">&lt;tr&gt;</span></td>
-                    <td>Table Row</td>
-                    <td>The table row container.</td>
-                </tr>
-                <tr>
-                    <td><span class="code">&lt;td&gt;</span></td>
-                    <td>Table Data</td>
-                    <td>The table row container.</td>
-                </tr>
-                <tr>
-                    <td><span class="code">&lt;tfoot&gt;</span></td>
-                    <td>Table Foot</td>
-                    <td>The set of rows defining the footer in a table.</td>
-                </tr>
-            </tbody>
-            </thead>
-        </table>
-        <h2>Table Attributes</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Attribute</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                </tr>
-            <tbody>
-                <tr>
-                    <td><span class="code">colspan</span></td>
-                    <td>Column Span</td>
-                    <td>Defines how many columns a td element should span.</td>
-                </tr>
-                <tr>
-                    <td><span class="code">rowspan</span></td>
-                    <td>Row Span</td>
-                    <td>Defines how many rows a td element should span.</td>
-                </tr>
-            </tbody>
-            </thead>
-        </table>
-    </header>
+    <h1>My Website Style Guide</h1>
+    <section class="container">
+        <h1>Colors</h1>
+
+        <ul class="list">
+            <li class="Cool-Blue">
+                <p>Cool Blue</p>
+                <p>#2d5dcc</p>
+            </li>
+            <li class="Pink">
+                <p>Pink</p>
+                <p>#d957d9</p>
+            </li>
+            <li class="Mint-green">
+                <p>Mint Green</p>
+                <p>#4fe0b0</p>
+            </li>
+            <li class="Beige">
+                <p>Beige</p>
+                <p>#efd9ca</p>
+            </li>
+
+        </ul>
+
+    </section>
+
+    <section class="container">
+        <h1>Fonts</h1>
+        <ul class="list list2">
+            <li class="font-source ">
+                <p class="font-label">Source Code Pro</p>
+                <p class="font-regular">The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-bold">The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-italic">The quick brown fox jumps over the lazy dog.</p>
+            </li>
+            <li class="font-Nunito">
+                <p class="font-label">Nunito Sans</p>
+                <p class="font-regular">The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-bold">The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-italic">The quick brown fox jumps over the lazy dog.</p>
+            </li>
+            <li class="font-Poppins">
+                <p class="font-label">Poppins</p>
+                <p class="font-regular">The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-bold">The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-italic">The quick brown fox jumps over the lazy dog.</p>
+            </li>
+        </ul>
+    </section>
+    <section class="container">
+        <h1>Text styles</h1>
+    <secion class="Text-style">
+        <h1>H1: Main page heading</h1>
+        <ul>
+            <li>Font-weight: 700 (bold)</li>
+            <li>Font-size: 26px</li>
+            <li>Font-family: Nunito Sans</li>
+        </ul>
+        <h2>H2: Subheading</h2>
+        <ul>
+            <li>Font-weight: 500</li>
+            <li>Font-size: 18px</li>
+            <li>Font-family: Poppins</li>
+        </ul>
+        <p>P: Paragraph text</p>
+        <ul>
+            <li>Font-weight: 400 (regular)</li>
+            <li>Font-size: 14px</li>
+            <li>Font-family: Poppins</li>
+        </ul>
+    </secion>
+    </section>   
 </body>
 
 </html>
